--- a/css/styles.css
+++ b/css/styles.css
@@ -19,14 +19,42 @@
 
 }
 .container {
-    width:1158px;
+    /* Mobile styles &>*/
+    min-width: 320px;
+    max-width: 428px;
     margin-left: auto;
     margin-right: auto;
-    outline:2px solid red;
-    outline-offset:-2 px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 16px;
+    padding-right: 16px;
+  
     }
+    .burger-button{
+        stroke:var(--Dark);
+        
+    }
+    
+
+    /* Tables styles &>*/
+    @media only screen and (min-width: 768px){ 
+    .container {
+    max-width:768px;}
+
+
+
+            }
+    /* Desdktop styles &> */
+    @media only screen  and (min-width: 1158px){ 
+        .container {
+        max-width: 1158px;
+        margin-left: auto;
+        margin-right: auto;
+        outline: 2px solid red;
+        outline-offset:-2 px;
+        padding-left: 15px;
+        padding-right: 15px;}
+
+                }
+
     .visually-hidden {
         position: absolute;
         width: 1px;
