--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,25 @@
         stroke:var(--Dark);
         
     }
-    
+    .btn-close {
+        position: absolute;
+        top: 24px;
+        right: 24px;
+        
+        
+
+
+        display: block;
+        margin-top: auto;
+        width: 24px;
+        height: 24px;
+        background-color:var(--Accent);
+        border-radius: 50%;
+        border:none;
+        cursor: pointer;
+        color:var(--Dark);
+        
+       }
 
     /* Tables styles &>*/
     @media only screen and (min-width: 768px){ 
@@ -94,11 +112,11 @@ img{
 
 /* Header section   */
 .header{ 
-    /* position: fixed; */
+    position: fixed;
     top: 0;
     z-index: var(--header-idx);
     width: 100%;
-    
+    padding: 
     border-bottom: 1px solid #e7e9fc;
     gap: 40px;
     display: flex;
@@ -106,6 +124,19 @@ img{
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
     
 }
+@media only screen and (min-width:768px;){
+.header{
+        
+    }
+    }
+
+@media only screen and (min-width:1158px;){
+.header{
+
+}
+}
+    
+
 .link {
     text-decoration: none;
     transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -133,16 +164,35 @@ img{
     
 }
 .list-nav{
+    display: none;
+    /* display: flex;
+    gap: 40px; */
+}
+@media only screen and (min-width:768px;){
+    .list-nav{
+     display: flex;
+     gap: 40px;
+            
+        }
+        }
+    
+    @media only screen and (min-width:1158px;){
+    .list-nav{
     display: flex;
     gap: 40px;
+    }
+    }
+    media screen {
+    
 }
 .contact{
     display: flex;
      
 }
 .list-contact{
-    display: flex;
-       gap: 40px;
+    display: none;
+    /* display: flex;
+       gap: 40px; */
 }
 /* reset end */
 
@@ -1052,4 +1102,69 @@ margin-bottom: 16px;
             fill: var(--Modal-background);
 
            }
+           /* Mobile menu styles */
+           .menu-toggle {
+            min-height: 40px;
+            min-width: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          
+            margin: 0;
+            padding: 0;
+            background-color: transparent;
+            cursor: pointer;
+            border: none;
+            border-radius: 50%;
+            outline: none;
+          }
+          
+          @media (min-width: 768px) {
+            .menu-toggle {
+              display: none;
+            }
+          }
+          
+          .menu-toggle:hover,
+          .menu-toggle:focus {
+            background-color: rgba(0, 0, 0, 0.1);
+          }
+          
+          .menu-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            padding: 32px;
+            background-color: #3f51b5;
+            z-index: 999;
+          
+            transform: translateX(100%);
+            transition: transform 250ms ease-in-out;
+          }
+          
+          .menu-container.is-open {
+            transform: translateX(0);
+          }
+          
+          .menu-container .menu-toggle {
+            position: absolute;
+            top: 16px;
+            right: 16px;
+            color: #fff;
+          }
+          
+          .mobile-menu {
+            padding: 0;
+            margin: 0;
+            list-style: none;
+          }
+          
+          .mobile-menu .link {
+            display: block;
+            padding: 10px;
+            color: #fff;
+            text-decoration: none;
+          }
            
