--- a/css/styles.css
+++ b/css/styles.css
@@ -17,14 +17,16 @@
      --header-idx: 10;
      --modal--idx: 100;
 
-}
-.container {
-    /* Mobile styles &>*/
+}   /* Mobile styles &>*/
+.container { 
     min-width: 320px;
     max-width: 428px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 16px; 
+    padding-left: 15px;
+    padding-right: 15px;
+    
+    
    
     }
     .burger-button{
@@ -49,8 +51,7 @@
     /* Tables styles &>*/
     @media only screen and (min-width: 768px){ 
     .container {
-    max-width:768px; 
-    width: 100%;       
+    max-width:768px;        
     outline-offset:-2 px;
     margin-left: auto;
     margin-right: auto;
@@ -90,6 +91,14 @@
     align-items: center;
 }
 
+/* Tablet styles */
+@media only screen and (min-width:768px;){
+    .header-nav{
+        display: flex;
+        margin : 16px ;
+        align-items: center;
+    }
+        }
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -106,8 +115,7 @@ img{
 }
 
 /* Header section   */
-.header{ 
-    position: fixed;
+.header{     
     top: 0;
     z-index: var(--header-idx);
     width: 100%;     
@@ -148,13 +156,16 @@ img{
     list-style: none;
     padding: 0;
     margin: 0;
-    display: flex;
+    display: flex;    
+    flex-wrap: wrap;
+    gap: ;
      
     
 }
 .header-container {
     display:flex;
     align-items: center;
+    justify-content: space-between;
     
 }
 @media only screen and (max-width:767px){
@@ -245,20 +256,22 @@ img{
     
 }
 @media only screen and (min-width:768px){
-    
+    .logo {
+        font-family: 'Raleway', sans-serif;
+        font-weight: 800;
+        font-size: 18px;
+        line-height: 1.17;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: var(--Dark);    
+        display: inline-block;
+        margin-left:16px;
+    }
 }
 
 @media only screen and (min-width:1158px) {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--Dark);    
-    display: inline-block;
-    margin-right: 76px;
-}
+    {
+    }}
 
 
 .logo-web {
@@ -349,22 +362,32 @@ color: var(--Pressed-state);
 .main-title {
     background-color: var(--Dark);   
     display: flex;
-    align-items:center;
-    padding: 188px 0;
+    align-items:center;    
     justify-content:center;
 }
-
+/* mobile style */
 .main-text {
-    font-size: 56px;
-    line-height: 1.07;
-    text-align: center;
+    font-size: 36px;
+    Line-height: 40px;
+    Line-height: 95%;
+    padding:112px  54px 72px 54px;
     letter-spacing: 0.02em;
-    color: var(--White-background);
-    max-width: 496px; 
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 48px;
+    color: var(--White-background);        
+   
     }
+
+    @media only screen and (min-width:768px){
+        .main-text {        
+            font-size: 56px;
+            line-height: 1.07;
+            text-align: center;
+            letter-spacing: 0.02em;
+            color: var(--White-background);
+            max-width: 496px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 48px;
+        }}
 /* .hero-container{
     
 } */
@@ -386,7 +409,7 @@ color: var(--Pressed-state);
     height: 56px;
     border: none; 
     border-radius: 4px;
-    margin: 0 auto;
+    margin: 0 auto 112px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    }
 
@@ -405,15 +428,102 @@ color: var(--Pressed-state);
 .navigation{
 display: flex;
 }
-
-/* Section 1 */
-.advantages-container{
-    padding: 120px 0 120px;
+/* Mobile style Section 1*/
+@media only screen and (max-width:767px){
+.adventeges-item{
+    display: none;    
+    justify-content: center;   
+    align-items: center;
+    box-sizing: border-box;
+    width: 264px;
+    height: 112px;  
+    border-radius: 4px;
+    background-color: #f4f4fd;   
     
-
+}
+.adventages-list-container{
+    width: 320px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 72px;
+    text-align: center;
+    margin: 0;
+    padding: 0;
 }
 .advantages{
-    flex-basis: calc((100% - 3 * 24px) / 4)
+    
+
+}}
+.advantages-container{
+    
+    padding: 96px 0px;  }
+
+
+    
+
+.adventage-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: var(--Dark);
+}
+
+.adventage-list {
+    font-size: 36px;
+    line-height: 1.15;    
+    letter-spacing: 2% ;   
+    color: var(--Dark);
+    margin-bottom: 8px;
+}
+
+.adventage-text {
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    color: var(--text-color);
+}
+
+
+/* .adventeges-item{
+    display: flex;    
+    justify-content: center;   
+    align-items: center;
+    box-sizing: border-box;
+    width: 264px;
+    height: 112px;  
+    border-radius: 4px;
+    background-color: #f4f4fd;   
+    margin-bottom:8px;
+
+} */
+
+/* Tablet styles Section 1*/
+/* @media only screen and (min-width:767px) */
+
+
+/* Desktop style Section 1 */
+    @media only screen and (min-width:1158px){
+    .adventeges-item{
+    display: flex;    
+    justify-content: center;   
+    align-items: center;
+    box-sizing: border-box;
+    width: 264px;
+    height: 112px;  
+    border-radius: 4px;
+    background-color: #f4f4fd;   
+    margin-bottom:8px;}
+
+/* Section 1 */
+
+.advantages-container{
+    text-align: center;
+    padding: 120px 0 120px;
+    }
+.advantages{
+    flex-basis: calc((100% - 3 * 24px) / 4);
 }
 .adventage-title {
     font-weight: 500;
@@ -438,20 +548,19 @@ display: flex;
     line-height: 24px;
     letter-spacing: 0.02em;
     color: var(--text-color);
-}
+}}
 
-.adventeges-item{
-    display: flex;    
-    justify-content: center;   
-    align-items: center;
-    box-sizing: border-box;
-    width: 264px;
-    height: 112px;  
-    border-radius: 4px;
-    background-color: #f4f4fd;   
-    margin-bottom:8px;
 
-}
+/* Tablet style */
+.logo {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--Dark);    
+    display: inline-block;}
 
 /* Section 2 */
 .activity-container{
@@ -677,6 +786,18 @@ display: flex;
     background-size: cover;
 
 }
+@media only screen and (max-width:767px){
+    .overlay{
+        max-width: 428px;
+        margin-left: auto;
+        margin-right: auto;
+        outline: 1px solid rgb(19, 17, 17);
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)),
+        url("../images/overlay/img-name.jpg");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;}}
+
 /* Socials icons */
 .socials{
     display: flex;
